--- a/tournaments/under25.html
+++ b/tournaments/under25.html
@@ -140,45 +140,45 @@
                         </ul>
                         <p class="group-details">Group C</p>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwf7p" target="_blank">Millie Bobby Brown<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwf7p" target="_blank">Millie Bobby Brown<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwf7p" target="_blank">Peyton List<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwf7p" target="_blank">Alexis Burnett<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwf7p" target="_blank">Alexis Burnett<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfm8" target="_blank">Esther Valding<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfm8" target="_blank">Esther Valding<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfm8" target="_blank">Kiernan shipka<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfm8" target="_blank">Lindsay De Vera<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfm8" target="_blank">Lindsay De Vera<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfbq" target="_blank">Maddie Ziegler<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfbq" target="_blank">Maddie Ziegler<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfbq" target="_blank">Ariel Winter<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfbq" target="_blank">Chou Tzu-yu<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfbq" target="_blank">Chou Tzu-yu<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfhc" target="_blank">Beatrice Barichella<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfhc" target="_blank">Beatrice Barichella<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfhc" target="_blank">Madelyn Cline<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfhc" target="_blank">Sierra McCormick<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/twwfhc" target="_blank">Sierra McCormick<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <p class="group-details">Group D</p>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Sistine Stallone<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Elisa Ezzedine<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Ariela Barer<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/u0ah09" target="_blank">Sistine Stallone<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/u0ah09" target="_blank">Elisa Ezzedine<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/u0ah09" target="_blank">Ariela Barer<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Mackenzie Foy<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Billie Eilish<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Noor Taher<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/u0agw6" target="_blank">Mackenzie Foy<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/u0agw6" target="_blank">Billie Eilish<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/u0agw6" target="_blank">Noor Taher<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Kaia Gerber<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Diane Leyre<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Anastasia Martin<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/u0agv0" target="_blank">Kaia Gerber<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/u0agv0" target="_blank">Diane Leyre<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/u0agv0" target="_blank">Anastasia Martin<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Clare Foley<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Maisie Williams<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Rachel Crow<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/u0agyc" target="_blank">Clare Foley<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/u0agyc" target="_blank">Maisie Williams<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/u0agyc" target="_blank">Rachel Crow<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND ONE -->
@@ -201,12 +201,12 @@
                             <li class="team team-top name-details"><a href="javascript:void(0);">Camila Morrone<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Peyton List</Li><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Kiernan Shipka<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Ariel Winter<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Madelyn Cline<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
